--- a/src/components/Hero.module.css
+++ b/src/components/Hero.module.css
@@ -22,6 +22,8 @@
     width: 400px;
     height: 600px;
     border-radius: 24px;
+    box-shadow: 0 4px 8px rgba(133, 133, 133, 0.4), 
+    0 6px 20px rgba(132, 132, 132, 0.3);
 }
 
 .external-links-container {
