--- a/src/components/ProjectCard.module.css
+++ b/src/components/ProjectCard.module.css
@@ -19,6 +19,7 @@
 
 .project-info-container h3 {
     margin-bottom: 0.7rem;
+    font-size: 2rem;
 }
 
 .project-info-container p {
@@ -67,9 +68,9 @@
     filter: invert(0.08);
 }
 
-.project:last-child .screenshot {
+/* .message-board .screenshot {
     height: 525px;
-}
+} */
 
 .buttons a {
     display: inline-block;
