--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -11,8 +11,9 @@
 
 .header .logo {
     margin: 0;
-    font-size: 2 rem;
+    font-size: 1.5 rem;
     text-wrap: nowrap;
+    font-weight: 400;
 }
 
 .header .nav ul {
@@ -22,7 +23,7 @@
 
 .header .nav li {
     list-style: none;
-    padding: 0 10px;
+    padding: 0 18px;
 }
 
 .header a {
