convert skills to flexbox

--- a/src/components/Skills.module.css
+++ b/src/components/Skills.module.css
@@ -11,13 +11,14 @@
 
 .skillgroups-container {
     padding: 0 10px;
-    display: grid;
-    gap: 12px;
+    display: flex;
+    flex-direction: column;
+    /* gap: 12px;
     grid-template-columns: 1fr 0.7fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr; */
 }
 
-.skillgroups-container .skillgroup:nth-child(1) {
+/* .skillgroups-container .skillgroup:nth-child(1) {
     grid-column: 1 / -1;
 }
 
@@ -27,6 +28,12 @@
 
 .skillgroups-container .skillgroup:last-child {
     grid-column: 2 / -1;
+} */
+
+.skillgroups-row {
+    display: flex;
+    flex-direction: row;
+    gap: 70px;
 }
 
 .skillgroup {
@@ -68,3 +75,15 @@
 .invert {
     filter: invert(0.93);
 }
+
+@media (max-width: 1064px) {
+    .skill-container img {
+      height: 40px;
+    }
+}
+
+@media (max-width: 750px) {
+    .skillgroups-row:not(:first-child) {
+      flex-direction: column;
+    }
+  }
