--- a/src/components/ProjectCard.module.css
+++ b/src/components/ProjectCard.module.css
@@ -1,5 +1,6 @@
 .project h3 {
-    font-size: 1.7rem;
+    font-weight: 400;
+    margin-bottom: 1rem;
     font-weight: 400;
 }
 
@@ -15,11 +16,6 @@
 
 .project-info-container > * {
     margin: 0;
-}
-
-.project-info-container h3 {
-    margin-bottom: 0.7rem;
-    font-size: 2rem;
 }
 
 .project-info-container p {
@@ -68,10 +64,6 @@
     filter: invert(0.08);
 }
 
-/* .message-board .screenshot {
-    height: 525px;
-} */
-
 .buttons a {
     display: inline-block;
     padding: 8px 24px;
@@ -86,3 +78,42 @@
     cursor: pointer;
     transition: background-color 0.3s ease;
 }
+
+@media (max-width: 1064px) {
+    .project {
+      max-width: 600px;
+      /* border: 2px solid gray; */
+      border-radius: 24px;
+      overflow: hidden;
+      background-color: rgba(0, 0, 0, 0.242);
+    }
+
+    .project-content-container {
+      flex-direction: column;
+    }
+
+    .project:nth-child(odd) .project-content-container {
+      flex-direction: column;
+    }
+
+    .screenshot {
+      width: 100%;
+      max-height: 400px;
+      border-radius: 0;
+    }
+
+    .project-info-container {
+      padding: 48px 18px;
+      padding-top: 0;
+    }
+
+    .project-info-container > h4,
+    .project-info-container ul {
+      display: none;
+    }
+
+  }
+
+  /* @media (max-width: 750px) {
+
+  } */
