--- a/src/components/ProjectShowcase.module.css
+++ b/src/components/ProjectShowcase.module.css
@@ -16,5 +16,13 @@
     flex-direction: row-reverse;
 }
 
+@media (max-width: 1064px) {
+    .projects-container {
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
+      gap: 30px;
+    }
+}
+
 
 
