feat: tune styling; move top padding to header; choose better font size; remove margin on first hr for better narrow view;

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 #root {
     flex-grow: 1;
     max-width: 1000px;
-    padding: 2rem;
+    padding: 0 2rem 2rem;
     box-sizing: border-box;
   
     --tagline-font-size: 3rem;
