--- a/src/index.css
+++ b/src/index.css
@@ -1,92 +1,91 @@
 :root {
-    font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-    line-height: 1.5;
-    font-weight: 200;
+  --background-color: #242424;
+  --font-color: rgba(255, 255, 255, 0.87);
+
+  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  line-height: 1.5;
+  font-weight: 200;
+
+  color-scheme: light dark;
+  color: var(--font-color);
+
+  font-synthesis: none;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
   
-    color-scheme: light dark;
-    color: rgba(255, 255, 255, 0.87);
+  background-color: var(--background-color);
+}
   
-    font-synthesis: none;
-    text-rendering: optimizeLegibility;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
+a {
+  font-weight: 500;
+  color: inherit;
+  text-decoration: inherit;
+}
+
+a:hover {
+  color: #99d600;
+}
+
+body {
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  /* min-width: 320px; */
+  min-height: 100vh;
+}
+
+hr {
+  margin: 3rem 0;
+  border: none;
+  height: 2px;
+  background: linear-gradient(
+    to right,
+    rgba(255, 255, 255, 0.1),
+    rgba(255, 255, 255, 0.4),
+    rgba(255, 255, 255, 0.1)
+  );
+  /* box-shadow: 0 2px 4px rgba(80, 80, 80, 0.5); */
+}
+
+h1 {
+  font-size: 3.2rem;
+  line-height: 1.1;
+}
+
+button {
+  border-radius: 8px;
+  border: 1px solid transparent;
+  padding: 0.6rem 1.2rem;
+  font-size: 1rem;
+  font-weight: 500;
+  font-family: inherit;
+  background-color: #1a1a1a;
+  cursor: pointer;
+  transition: border-color 0.25s;
+}
+
+button:hover {
+  border-color: #646cff;
+}
+
+button:focus,
+button:focus-visible {
+  outline: 4px auto -webkit-focus-ring-color;
+}
   
-    --background-color: #242424;
-  
-    background-color: var(--background-color);
+@media (prefers-color-scheme: light) {
+  :root {
+    color: #213547;
+    background-color: #ffffff;
   }
-  
-  a {
-    font-weight: 500;
-    color: inherit;
-    text-decoration: inherit;
-  }
+
   a:hover {
-    color: #99d600;
-  }
-  
-  body {
-    margin: 0;
-    display: flex;
-    justify-content: center;
-    /* min-width: 320px; */
-    min-height: 100vh;
-  }
-  
-  hr {
-    margin: 3rem 0;
-    border: none;
-    height: 2px;
-    background: linear-gradient(
-      to right,
-      rgba(255, 255, 255, 0.1),
-      rgba(255, 255, 255, 0.4),
-      rgba(255, 255, 255, 0.1)
-    );
-    /* box-shadow: 0 2px 4px rgba(80, 80, 80, 0.5); */
-  }
-  
-  h1 {
-    font-size: 3.2rem;
-    line-height: 1.1;
+    color: #747bff;
   }
   
   button {
-    border-radius: 8px;
-    border: 1px solid transparent;
-    padding: 0.6rem 1.2rem;
-    font-size: 1rem;
-    font-weight: 500;
-    font-family: inherit;
-    background-color: #1a1a1a;
-    cursor: pointer;
-    transition: border-color 0.25s;
+    background-color: #f9f9f9;
   }
-  button:hover {
-    border-color: #646cff;
-  }
-  button:focus,
-  button:focus-visible {
-    outline: 4px auto -webkit-focus-ring-color;
-  }
+}
   
-  @media (prefers-color-scheme: light) {
-    :root {
-      color: #213547;
-      background-color: #ffffff;
-    }
-    a:hover {
-      color: #747bff;
-    }
-    button {
-      background-color: #f9f9f9;
-    }
-  }
-  
-  /* MEDIA QUERIES */
-  
-  @media (max-width: 1064px) {
-    /* :root {
-        font-size: 14px;
-    } */
-  }
