--- a/src/components/ProjectDetails.module.css
+++ b/src/components/ProjectDetails.module.css
@@ -1,5 +1,5 @@
 .project-content-container {
-    margin-top: 3rem;
+    margin: 3rem 0;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -51,7 +51,8 @@
 }
 
 .screenshot {
-    width: 75%;
-    margin-top: 3rem;
+    width: 90%;
+    margin: 2rem;
     border-radius: 18px;
+    align-self: center;
 }
