--- a/src/components/Connect.module.css
+++ b/src/components/Connect.module.css
@@ -4,6 +4,10 @@
     font-size: 1.2rem;
 }
 
+.content-container > div:first-of-type {
+    margin-top: 1.5rem;
+}
+
 .connect-section h2 {
     margin: 0;
 }
@@ -52,5 +56,9 @@
       flex-direction: row;
       justify-content: center;
       gap: 36px;
+    }
+
+    .content-container > div:first-of-type {
+        margin-top: 0;
     }
 }
