fix: media query for Skills,AboutMe, Hero sections

--- a/src/components/About.module.css
+++ b/src/components/About.module.css
@@ -13,3 +13,12 @@
 .paragraphs > div {
     flex-grow: 1;
 }
+
+/* Media queries */ 
+
+@media (max-width: 750px) {
+    .paragraphs {
+        flex-direction: column;
+        gap: 0;
+    }
+}
