--- a/src/components/Skills.module.css
+++ b/src/components/Skills.module.css
@@ -13,8 +13,8 @@
     padding: 0 10px;
     display: flex;
     flex-direction: column;
-    /* gap: 12px;
-    grid-template-columns: 1fr 0.7fr 1fr;
+    gap: 15px;
+    /* grid-template-columns: 1fr 0.7fr 1fr;
     grid-template-rows: 1fr 1fr 1fr; */
 }
 
@@ -33,7 +33,7 @@
 .skillgroups-row {
     display: flex;
     flex-direction: row;
-    gap: 70px;
+    gap: 15px;
 }
 
 .skillgroup {
@@ -44,7 +44,7 @@
     border-radius: 18px;
     border: 2px dotted rgba(255, 255, 255, 0.564);
     background-color: inherit;
-    background-color: rgba(255, 255, 255, 0.04);
+    background-color: rgba(124, 192, 110, 0.04);
 }
 
 .skillgroup-grid-container {
